--- a/bower.json
+++ b/bower.json
@@ -6,10 +6,10 @@
     "jquery",
     "component"
   ],
-  "main": "jquery.js",
+  "main": "jquery.slidatron.js",
   "license": "MIT",
   "dependencies": {
-    "jquery": "~1.10.2",
-    "jquery.event.drag-drop"
-  }  
+    "jquery"                  : "~1.10.2",
+    "jquery.event.drag-drop"  : "~2.2.1"
+  }
 }
