--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "slidatron",
-  "version": "0.2.12",
+  "version": "0.3.0",
   "description": "CSS / mobile friendly jQuery slider",
   "main": "jquery.slidatron.js",
   "scripts": {
@@ -11,7 +11,9 @@
     "url": "git://github.com/azt3k/sliatron.git"
   },
   "devDependencies": {
-    "uglify-js": "2.4.15"
+    "uglify-js": "2.4.15",
+    "connect": "3.3.4",
+    "serve-static": "1.9.1"
   },
   "keywords": [
     "jquery",
