--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "slidatron",
-  "version": "0.4.10",
+  "version": "0.5.0",
   "description": "jQuery component",
   "keywords": [
     "jquery",
@@ -13,10 +13,10 @@
     "touch"
   ],
   "main": "jquery.slidatron.js",
-  "license": "MIT",
+  "license": "BSD",
   "dependencies": {
-    "jquery"                  : "~1.11.1",
-    "jquery.event.drag-drop"  : "https://raw.githubusercontent.com/GerHobbelt/jquery.threedubmedia/master/event.drag/jquery.event.drag.js",
-    "gsap"                    : "~1.14.1"
+    "jquery"          : "~1.11.1",
+    "slidatron.drag"  : "~1.0.0",
+    "gsap"            : "~1.14.1"
   }
 }
